# papersplease

./: .gitignore  pyproject.toml
papersplease/: run.py
papersplease/app/: __init__.py  api.py  common.py  config.py  dump_manager.py  dump_scheduler.py  fetch_data.py  sync_data.py
